@@ -150,6 +150,7 @@ bool populateTests(CppUnit::TextTestRunner& runner, int argc, char* argv[]) {
     sets.insert(std::make_pair("elementarymoves", &addElementaryMoves));
     sets.insert(std::make_pair("connectedsumdecomp", &addConnectedSumDecomp));
     sets.insert(std::make_pair("isomorphism3", &addIsomorphism3));
+    sets.insert(std::make_pair("linkingsurfaces", &addLinkingSurfaces));
     sets.insert(std::make_pair("homologicaldata", &addHomologicalData));
     // We no longer build-depend on boost, so disable the boost.graph test.
     // sets.insert(std::make_pair("dualgraph3", &addDualGraph3));
